--- a/MySQL/数据库_2_系统原理.md
+++ b/MySQL/数据库_2_系统原理.md
@@ -90,7 +90,7 @@
 
 ###### 不可重读
 
-+ 事务A 连续两次 获取相同的资源，两次获取的结果不同！这期间，数据被其他事务修改过！
++ 事务A 内 连续两次 获取相同的资源，两次获取的结果不同！这期间，数据被其他事务修改过！
 
   <img src="image\不可重读.png" style="zoom:50%;" />
 
@@ -472,7 +472,7 @@
 
 ##### 介绍
 
-+ MVCC（Multi Version Concurrency Control）多版本控制并发
++ MVCC（Multi Version Concurrency Control）多版本并发控制
 
   它为某每个行 维护了一个 行记录版本链，当某事务查询数据时，便从版本链中为其找出最合适的行记录版本！
 
@@ -547,7 +547,7 @@
 
 + innodb 正是**通过 read view 实现了不同隔离级别的 一致性读！**
 
-+ 当 事务读取某行记录时，innodb 会将当前行的 DB_TRX_ID 与 read view 做对比！判断改行是否可见，如果可见，则使用该行数据，否则 根据根据回滚指针 从 undo log 中查找可见的 行记录数据！
++ 当 事务读取某行记录时，innodb 会将当前行的 TRX_ID 与 read view 做对比！判断改行是否可见，如果可见，则使用该行数据，否则 根据回滚指针 从 undo log 中查找可见的 行记录数据！
 
 ##### MVCC 一致性读
 
@@ -878,7 +878,7 @@
 
 1. 对于这两类数据库，对方的优势就是自己的弱势，反之亦然。
 2. Nosql 数据库慢慢开始具备SQL数据库的一些复杂查询功能，比如MongoDB。
-3. 对于事务的支持也可以用一些系统级的原子操作来实现例如乐观锁之类的方法来曲线救国，比如Redis set nx。
+3. 对于事务的支持也可以用一些系统级的原子操作来实现例如乐观锁之类的方法来曲线救国，比如Redis setnx。
 
 #### 完整性约束
 
