操作系统 修正

--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -17,25 +17,35 @@
 
 + **进程 vs 线程**
 
-  1. 进程是资源分配的基本单位，是资源的拥有者！
+  1. 进程是**资源分配**的基本单位，是资源的拥有者！
 
      线程属于进程，是 CPU 调度的基本单位，它不拥有资源，它只使用 所属进程的资源！
 
-  2. 进程之间相互独立，不共享资源，各个进程有自己 独立的 虚拟机地址空间！
+  2. 进程之间**相互独立**，不共享资源，各个进程有自己 独立的 虚拟机地址空间！
 
      线程 与 所属进程下的 其他线程 共享进程的 虚拟地址空间，也就共享 进程的资源！
 
-  3. 进程的切换 比 线程 开销大。
+  3. 进程的**上下文切换** 比 线程 开销大。
 
      因为，进程相互独立，切换时，系统必须要交换地址空间！
 
      而，进程内的线程，共享进程的 资源空间，就不涉及相关的资源信息保护 和 地址空间变化！
 
-  4. 线程之间的通信 相较于 进程通信 要更加容易！
+  4. 线程之间的**通信** 相较于 进程通信 要更加容易！
 
      通信 就是 进程或线程之间 进行数据交换的过程：由于 同一个进程下的线程 共享同一个地址空间，所有的全局数据都可以访问，不需要特殊的手段！而，进程之间的通信则相对复杂！
 
-  5. 正是因为线程的轻量级，并且不持有资源，因此 进程内部可以 建立大量的线程。而操作系统中 进程 的个数有限，远远少于 线程！
+  5. 正是因为线程的轻量级，并且不持有资源，因此 进程内部可以 建立大量的线程。而操作系统中 进程 的**个数**有限，远远少于 线程！
+
++ **协程**
+
+  ```java
+  /*
+   · 协程更轻量的线程，它工作在 用户态，能够在用户态产生中断并转而执行其他的程序！
+   · 协程的上下文切换由程序控制，并不由内核控制，在上下文切换时，并不需要内核态的支持！
+   · 因此，协程 比 线程更加高效！
+  */
+  ```
 
 + **程序**
 
@@ -44,6 +54,66 @@
 + JVM  中的 线程和进程
 
   线程是进程划分成的更小的运行单位，两者最大的区别在于，各个进程之间相互独立，而线程之间可以相互影响！JVM 内部 多个线程共享同一个进程中的 堆和方法区，而每个线程的 程序计数器、虚拟机栈、本地方法栈 又是私有的！
+
+##### 中断
+
+```java
+/*
+ · 中断
+	CPU 对系统中或者系统外发生异步事件的响应，CPU 暂停正在执行的程序，保留现场后自动转去执行相应的处理程序，处理完后返回断点，继续执行被打断的程序！
+	
+ · 中断处理
+	中断的处理由CPU+操作系统处理：处理过程：使用中断向量表！
+	中断向量表 是 操作系统为每种不同的信号中断设置一个值（16进制值）存放在中断向量表中。
+	当cpu接收到中断信号时，将其告知操作系统，操作系统便会去查询中断向量表，根据值调用相应的程序。
+· 硬中断、软中断
+*/
+```
+
+##### 系统级别
+
+```java
+/*
+ · cpu的将指令分为了四个级别：0 1 2 3 四个级别:
+ 	危险的指令处于 0级上，可以直接访问硬件，为了安全，级别低的就不能访问硬件。
+ 
+ · 操作系统就利用了cpu的分级特性，linux操作系统，应用了其中的 0级和3级。
+ 	linux的内核态：0级别：内核可以访问所有的内存空间
+ 	linux的用户态：3级别：用户只能访问用户的内存空间
+ 	
+ · 这样的的分级使得系统非常稳定安全。
+*/
+```
+
++ [Linux系统整体架构：用户态 vs 内核态](https://baijiahao.baidu.com/s?id=1637922221053576019&wfr=spider&for=pc)
+
+**为什么和内核态打交道，效率低？**
+
+```java
+/*
+ · 用户态调用任何内核函数（socket网络上的读写、启动、唤醒、阻塞、杀死线程...）时都会产生一个中断：著名的“80中断（0x80）”。
+ · 用户程序 进行系统调用时，会执行一系列耗时的操作：
+ 	1、用户程序发出 0x80中断 或者 调用sysenter原语
+		 以前的CPU：通过软件产生软中断80中断
+ 		 最新的CPU，在硬件上做的支持，提供 系统调用原语，通过这个原语就可以直接切换到内核态
+ 	
+ 	2、操作系统进入内核态，需要到中断向量表中，查找 80中断 相关的处理子程序的入口，同时保存硬件和用户线程的执行状态：
+ 		（1）在中断向量表中查找处理例程（去寻找哪个函数处理这个中断值0x80：就是system_call）
+ 		（2）保存硬件现场：CS、IP等寄存器的值
+ 		（3）保存用户线程状态：堆栈和寄存器中的值
+ 
+ 	3、执行 中断处理子程序：system_call
+ 		（1）根据参数与编号寻找对应请求的处理例程
+ 		（2）执行并返回，将返回值放在eax寄存器中
+ 	
+ 	4、返回用户态，恢复现场：
+ 		用户态程序读取出返回值，同时将之前保存在栈中的数据取出，恢复现场
+ 	
+ 	5、用户程序继续执行
+
+ · 正是这些步骤，使得效率较低！
+*/
+```
 
 ##### 进程通信
 
@@ -407,11 +477,7 @@ current thread 14
 5. 死锁的**解除**
 
    + 资源剥夺法：发现死锁后，**从其他线程中剥夺足够的资源**分配给死锁线程，以解除死锁状态！
-   + 撤销进程法：发现死锁后，**撤销所有死锁进程**！
-
-#### 系统调用
-
-p47
+   + 撤销进程法：发现死锁后，**撤销所有死锁进程**！（MySQL 按照 FIFO 的方式部分或者全部回滚一个事务）
 
 #### 内存管理
 
@@ -700,7 +766,7 @@ p47
 
 + 请求页式管理中，每当所要访问的页不存在于 内存中时，就会产生缺页中断，请求操作系统将所缺的页面调入内存中！
 
-+ 缺页中断作为中断，它童谣需要经历如下步骤：
++ 缺页中断作为中断，它同样需要经历如下步骤：
 
   1. 保护 CPU 环境
   2. 分析中断原因
@@ -943,6 +1009,36 @@ p47
   # 也可以使用：需要 install 该命令
   lsof -i :6379
   ```
+
++ **排查问题相关命令**
+
+  ```shell
+  grep 内容 文件 # 特定内容：
+  top # 查看 CPU 负载，如下：
+  $ top -H -p pid
+  
+  ls -h 、du -sh # 文件大小：
+  df -hl # 磁盘空间大小
+  sort # 排序命令 
+  	 # 命令可以用于文件内容排序并输出；也可以配合通道，将某些查询命令的执行结果排序后输出
+  head # 显示文件前几行/查询结果的前几行（通道）
+  
+  # netstat 命令行工具
+  netstat -tunlp # 列出正在监听的所有 TCP 或者 UDP 端口，包括使用端口 和 套接字状态的服务
+   	# 此命令中使用的选项具有以下含义：
+  	-t  # 显示 TCP 端口。
+  	-u  # 显示 UDP 端口。
+  	-n  # 显示数字地址而不是主机名。
+  	-l  # 仅显示侦听端口。
+  	-p  # 显示进程的 PID 和名称。仅当您以 root 或 sudo 用户身份运行命令时，才会显示此信息。
+  	
+  # ss 工具 是 netstat 的新版本
+  ss -tunlp
+  
+  lsof -i :端口 # 检查某个端口
+  ```
+
+  + [磁盘大小、文件大小、排序方法](https://blog.csdn.net/lkforce/article/details/80917306?depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-3&utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-3)
 
 + `kill` 命令
 
