--- a/计网/计网_1_基础.md
+++ b/计网/计网_1_基础.md
@@ -118,13 +118,45 @@
 
   是 因特网的 一项核心服务，它**是将 域名 和 IP 相互映射的一个分布式数据库**，能够方便用户通过域名 访问互联网，而不需要记住 IP数字串！
 
-+ 域名
++ 域名*分层*
 
   域名具有层次结构，从上到下依次为：*根域名、一级域名、二级域名*
 
   ![](image\域名层次结构.png)
 
-+ DNS 数据传输
++ **DNS 将 域名 转换为 IP**
+
+  ```
+   · 首先，DNS 是分布式的，分布式体现在，每一层的域名，都有自己的域名服务器，并且下层的 域名服务器 都需要注册到所属的上层 域名服务器中！
+  
+   · 浏览器输入 url 之后，首先需要通过 DNS 域名服务器 根据域名 查询对应的 ip，再将请求发送给 指定的 ip 主机上！
+  ```
+
+  1. 首先查询 **浏览器缓存**；没有，则下一步！
+
+  2. 查询**操作系统本地文件 /etc/hosts 中是否配置**；没有，则下一步！
+
+  3. 查询 **本地DNS解析服务器 缓存**，如果查询不到，则直接将请求 转发到 根域名服务器 进行解析！
+
+     ```
+     LDNS 为 本地互联网接入 DNS 解析服务，具有缓存域名解析结果的功能！
+     ```
+
+  4. 根域名服务器(Root Server) 为 本地域名服务器(LDNS) 解析请求中的 **主域名服务器(gTLD)**，并将主域名服务器的 ip地址 返回给 根域名服务器！
+
+  5. 本地域名服务器 **向 主域名服务器发起解析请求**！
+
+  6. 主域名服务器 解析请求中的域名，找到对应的 **Name Server域名服务器** ip 地址，并将其返回给 LDNS
+
+     ```
+     Name Server 域名服务器 中缓存了 域名和ip 的映射关系，正常情况下根据域名得到 目标IP 记录！
+     ```
+
+  7. LDNS 查询 Name Server 域名服务器，获取到 **域名&IP 映射关系**，并将其缓存到 LDNS 中！
+
+  8. 最后，**访问 IP** ！
+
++ DNS 的传输层协议：
 
   DNS 可以使用 **UDP 或者 TCP** 进行传输，使用**端口号都为 53**
 
@@ -142,7 +174,10 @@
 #### 传输层
 
 + 为应用层提供了 通用的数据 传输服务，并且，还为高层应用 屏蔽了底层网络的通信细节，使得 通信过程看起来，像是在 通信双方的 传输层之间有一条 逻辑通信信道！
+
 + 传输层的两个数据传输协议：UDP（用户数据报协议）、TCP（传输控制协议）
+
+  [JAVA 线上故障排查#网络部分](https://mp.weixin.qq.com/s/EM5tbVkG4KJZ2D95qjJNuA)
 
 ##### UDP
 
@@ -241,6 +276,8 @@
 + *窗口*：窗口值表示 接收端 每次能接收数据的大小，避免发送端发送过多的数据，达到流量控制的效果！
 
   之所以要有这个 限制，是因为 接收方的数据缓存空间是有限的！
+
++ *RST 标志* ：RST 标志表示复位，用来异常地 关闭连接！
 
 + *校验和* ：检验首部 和 数据 两部分是否被修改！
 
@@ -398,6 +435,185 @@
   TCP 有一个**保活计时器**，通常设置为 2 小时，如果两个小时内，没有手收到客户端的任何数据，服务器就会 每隔75s 发送一个探测报文段，连续探测 10 次之后，服务器就认为 客户端出现了故障，并关闭连接！
 
   服务器每收到一次客户端的请求，就会重新复位这个 计时器！
+
+##### TCP 之 序列号
+
++ 每一次的 TCP 连接都应该 **互不相同**，并且需要 **随机生成**！
+
++ *互不相同*
+
+  ```
+   · 防止 上一次连接中 客户端发送的数据段在网络中滞留，当连接意外中断后，滞留的数据段在下一次连接中 被服务端接收的情况！
+  
+   · 假设：前后两次 TCP 连接中，初始序列号相同，都为 1
+   	经过三次握手之后，序列号变为 3，如果客户端传送的 1个长度为 10 的数据段 在网络中滞留。由于网络原因 客户端、服务端意外断开，那么网络恢复后，双方重新建立连接，滞留在网络中的 数据段 也成功到达了服务端，由于数据段的序列号为 3，与服务端预期相同，因此被接收，而后续客户端发送的数据将无法正常被接收！
+  ```
+
++ *随机生成*
+
+  ```
+   · 防止 序列号 被攻击者伪造！
+  ```
+
+##### TCP 之 SYN
+
+###### SYN 标志位
+
++ 当 ack=0 时，syn 用于申请建立连接，用于 三次握手 的第一次握手！
+
++ **TCP 建立连接详情**
+
+  ![](image\TCP 建立连接详情.jpg)
+
+  + 如图，客户端发送 syn 请求连接后，服务端会响应 ACK+SYN 确认连接，并将 连接信息 存放在 **syns queue（半连接队列）** 中，表示等待客户端确认最终连接，而这些连接处于 SYN_RCVD 状态！
+  + 当 服务端 接受到 ACK 确认应答之后，将该连接信息 从 syns queue 中移除，并加入 **accept queue（完全连接队列）** 中，进入ESTABLISH 状态！
+
+  ```
+  syns queue 和 accept queue 都是定长，因此，会出现 队列 溢出的状况！
+  ```
+
+  + [tcp 半连接队列 和 完全连接队列](https://www.jianshu.com/p/ff26312e67a9)
+
+###### SYN Flood 攻击
+
++ **SYN Flood 攻击属于 DOS、DDOS 攻击中的 一种，它利用了 TCP 协议三次握手的缺陷，通过发送 大量的 半连接请求，耗费服务端的 CPU 和 内存资源！**
+
+  ```
+   · 配合 IP欺骗，SYN 攻击能够达到很好的效果，通常，客户端在短时间内伪造大量 IP，向服务端不断发送 syn 报文段申请连接，服务端响应确认报文段后，等待客户端确认！
+   · 由于，IP 是伪造的，当这些 IP 的主机收到 ACK+SYN 报文段后，将会丢弃，此时服务端长时间接收不到确认信息（少了第三次握手），便会重传 ACK+SYN 多次（默认会重试 5 次）！
+   	
+   	因此，这种攻击会造成 服务端的半连接队列 被占满，同时，服务端会耗费资源响应 ACK+SYN，使得 服务端 运行缓慢，甚至系统瘫痪！
+  ```
+
++ **防护措施**
+
+  1. *无效连接监视释放* 
+
+     ```
+      · 不断监视系统中半连接 和 不活动连接，当达到一定阈值后，撤消这些连接，释放系统资源。
+      · 这种方式，会导致 正常的连接也会被释放掉！
+     ```
+
+  2. *延缓 TCB 分配方法*
+
+     ```
+      · SYN FLOOD 攻击正是利用 服务端接收到 SYN 数据报文段之后，立即为其分配 TCB 资源，从而占用了系统资源！
+      
+      · 解决办法：
+      	1. Syn Cache 技术：
+      	收到 SYN 报文段之后，暂时将 连接保存到 HASH 表中，等待客户端确认应答后，再为其分配 TCB
+      	
+      	2. Syn Cookie 技术：
+      	Syn Cookie技术则完全不使用任何存储资源，它使用一种特殊的算法生成Sequence Number，这种算法考虑到了对方的IP、端口、己方IP、端口的固定信息，以及对方无法知道而己方比较固定的一些信息，如MSS、时间等，在收到对方 的ACK报文后，重新计算一遍，看其是否与对方回应报文中的（Sequence Number-1）相同，从而决定是否分配TCB资源
+     ```
+
+  3. *使用 SYN Proxy 防火墙*
+
+     ```
+      · 对试图穿越的 SYN 请求进行验证之后才放行！
+     ```
+
+##### TCP 之 RST
+
+###### RST 标志位
+
++ **RST 标志位：用来异常地关闭 无用的连接，区别于 四次挥手，在异常时代替 FIN**
+
+  ```
+   · 在发送 RST报文段 关闭连接时，直接丢弃缓冲区中的数据，并不会等待这些数据发送！
+   	接收端收到 RST报文段 之后，不会发送 ACK 确认关闭连接！
+  ```
+
++ *TCP 处理程序会在 自己认为的 异常时刻发送 RST报文！*
+
+  如下几种情况：
+
+  + *端口未监听*
+
+    ```
+    客户端向服务端发起连接时，如果 服务端 上并没有监听对应的 端口，则 服务端操作系统的 TCP 处理程序会发送 RST报文段！
+    ```
+
+  + *半开连接*
+
+    ```
+    如果在对方还未知的情况，私自断开连接，则该服务器处于 半开连接 状态，此后收到对方的数据之后，会响应一个 RST 报文段！
+    
+    对于 成功建立连接的两个服务器，客户端 向服务端发送 FIN报文 申请关闭连接， 服务端发送 ACK确认报文段 之后，如果网断了，那么 客户端 可能会放弃这个连接，而当 网 恢复之后，如果 服务端继续向 客户端 发送数据，此时，客户端并不认识这个连接，于是就会发送 RST 报文段！
+    ```
+
+  + *提前关闭连接*
+
+    ```
+    服务端 接收到 socket 发送的数据之后，如果数据没有成功的传送到 应用层，那么服务端将会发送一个 RST 提前关闭连接！
+    ```
+
+  + *在一个已关闭的 socket 上接收到数据* 
+
+    ```
+    若 通信双方 都都断开连接后，其中一方收到了 另一方发送的报文段，则会返回RST 报文段！
+    ```
+
++ RST 产生的错误：
+
+  1. connection reset
+
+     ```
+      · 在一个 已关闭的 连接上进行 读 操作！
+     ```
+
+  2. connection reset by peer
+
+     ```
+      · 在一个 已关闭的 连接上进行 写 操作！
+     ```
+
+  3. broken pipe
+
+     ```
+      · 管道层面的错误：表示对已关闭的管道进行 读写 操作，往往是在收到 RST，抛出 connection reset 错误之后，继续读写数据报的错！
+     ```
+
+###### RST 攻击
+
++ RST攻击 也称为 复位攻击。
+
+  表示：**客户端和服务端通信的过程中，如果第三个服务器伪造 客户端的 TCP报文段，并发送给服务端，那么服务端将会发送一个 RST报文段，表示异常地断开与客户端的连接！**
+
++ *伪造的 TCP 报文段：*
+
+  1. **伪造的 RST报文段**
+
+     ```
+      · 如果伪造 RST报文段，那毫无疑问，服务端会丢弃缓冲区上的所有数据，强制关闭连接！
+     ```
+
+  2. *伪造的 SYN报文段 ？*  *这个不是 第三次握手解决的问题嘛？和 RST 有关？ 百思不得其解*
+
+     ```
+      · 如果伪造 SYN报文段，那么服务端认为 客户端疯了（与 OS 实现有关），正常连接时又来了新连接，此时 服务端会向 客户端 主动发送 RST 包，并在服务端强制关闭连接！
+     ```
+
++ 伪造报文段 的*关键：* **源端口 & 序列号**
+
+  + 一条 TCP 连接由 *源IP、目标IP、源端口、目标端口* 唯一确定！
+
+  + 由于 目标端口 与 IP 公开，因此，想要伪造源主机上的 TCP 报文段时，只需要知道 源主机上正在通信的 端口即可！
+
+  + 其次，即使成功获取了 源端口，如果伪造的 报文段 中，序列号 在服务端可接收的 序列号范围之外，那么该报文段会被服务端丢弃！
+
+    因此，伪造报文段还需要 `伪造可行的 序列号`！
+
+  > **疑问：源端口 和 序列号不能够抓包看到吗 ？ --- 自己尝试抓包看看！**
+
++ **为了防止 RST 攻击，需要在建立连接时使用随机的 序列号 ！**
+
+  ```
+   · RFC 793规定，应该使用一个 每4微妙 +1 的 32bit 数值计数器 来选定 序列号！
+   	但是一旦有人掌握了 该计数器 的规律，那就能够轻易的伪造出 序列号，进而伪造 TCP 报文段！
+   	
+   · 因此，当前大部分操作系统 都会使用一种 半随机的方式生成 序列号，例如：Linux、Windows 便使用了 “计数器+随机偏移量” 的方式选取 序列号！
+  ```
 
 ##### TCP 可靠传输
 
@@ -847,7 +1063,7 @@
 
 + ICMP 网际控制报文协议
 
-  ICMP 协议 辅助 IP协议 ，用于检测网络通信故障 并 实现链路追踪，最典型的应用就是 PING 和 traceroute！
+  ICMP 协议 辅助 IP协议 ，用于检测**网络通信故障** 并 **实现链路追踪**，最典型的应用就是 **PING 和 traceroute**！
 
   ICMP 封装在 IP 数据报中，但是不属于高层协议！
 
@@ -857,7 +1073,7 @@
 
 + ICMP 报文类型
 
-   可分为 差错报告报文 和 询问报文
+   可分为 **差错报告报文** 和 **询问报文**
 
   <img src="image\ICMP 报文类型.webp" style="zoom:67%;" />
 
@@ -886,7 +1102,7 @@
      	避免 无用的 IP数据报 在网络上无休止的被转发！同时还能用 TTL 控制数据报被转发的范围！
      ```
 
-     典型应用：traceroute
+     典型应用：**traceroute**
 
   4. 回送请求 / 回送应答（ICMP 回送消息）
 
@@ -894,11 +1110,11 @@
 
      可以向 目标主机 发送回送请求的消息，也可以接收 目标主机 发送的 回送应答消息！
 
-     典型应用 ：PING
+     典型应用 ：**PING**
 
 ###### ICMP 应用
 
-+ Traceroute —— TTL
++ **Traceroute —— TTL**
 
   ```xml
   <!--
@@ -949,8 +1165,6 @@
 + 由于 网络层提供的是 主机之间的数据传输服务，而主机之间，可能有许多链路，此时就需要链路层协议 **为 同一条链路上的网络节点 提供数据传输服务**！它将来自网络层的 IP 数据报封装成 帧，以**帧**为单位传输！
 
   数据链路层的主要作用是在互联网 同一个数据链路的节点之间进行数据传递，而一旦跨越多种数据链路，就需要借助网络层。网络层可以跨越不同的数据链路，即使是在不同的数据链路上也能实现两端节点之间的数据传递！
-
-
 
 + 数据链路层的协议 定义了 通过通信媒介互连的设备之间传输的规范！
 
