--- a/并发/并发_2_J.U.C 并发容器 .md
+++ b/并发/并发_2_J.U.C 并发容器 .md
@@ -46,7 +46,6 @@ HashMap 是线程不安全的，在并发的场景下，如果想使用线程安
  	原因：元素的插入是头插法，会修改结点之间引用的关系，并发扩容时，很可能出现并发线程同时对其扩容，最后导致结点之间循环引用的问题，当下一个线程访问这个结点时，就会出现死循环！
  · HashMap 1.8 改用 尾插法，不会修改结点间的引用关系，并发扩容时不会出现链表倒置的情况，所以不会产生上述问题。
  · HashMap 并发更新同一个元素时，由于并没有做任何同步，线程之间修改相互覆盖，所以同样是线程不安全的！
- · 由于 HashTable、SynchronizedMap 都是对当个操作 put、get、remove等添加了锁，所以单个操作能保证线程安全，但是多个操作进行复合操作时，线程安全性仍然无法自然保障！
 
 =》ConcurrentHashMap 与 HashTable 的区别 ？
 1）底层数据结构
@@ -100,7 +99,7 @@ Segment(float lf, int threshold, HashEntry<K,V>[] tab) {
     this.table = tab;//主干数组即HashEntry数组
 }
 
-// ConcurrentHashMap 构造方法
+// ConcurrentHashMap 构造方法：分段数量一经创建就不再改变
 public ConcurrentHashMap(int initialCapacity,	// 初始化容量	：默认 16
                          float loadFactor, 		// 填装因子		：默认 0.75
                          int concurrencyLevel	// 并发度：Segment 数量	：默认16
@@ -257,7 +256,7 @@ final V put(K key, int hash, V value, boolean onlyIfAbsent) {
  在上述 put 操作中，如果插入或者对已存在的元素进行修改，则 modCount+1 即修改次数+1。
  modCount 用于并发迭代（foreach、iterator）的时候，检测 集合是否有被其他线程修改过！
 	迭代前传入 modCount 作为 原值 expectedModCount
-	迭代过程中 当迭代器 使用 next() 与 hasNext() 方法时，会对比 modCount（现值） 与 expectedModCount（原值）判断所在集合是否被其他线程修改，如果两者不一致，则判断未被修改过，抛出异常：ConcurrentModificationException
+	迭代过程中 当迭代器 使用 next() 与 hasNext() 方法时，会对比 modCount（现值） 与 expectedModCount（原值）判断所在集合是否被其他线程修改，如果两者不一致，则判断为被修改过，抛出异常：ConcurrentModificationException
 	
 【问题】
 	fail-fast 策略并不只是针对其他线程，也是针对自己，自己人为修改完集合后，modCount也会改变，同样会抛出 ConcurrentModificationException 异常！
@@ -426,9 +425,9 @@ static final int spread(int h) {
 // cas 操作 
 static final <K,V> boolean casTabAt(Node<K,V>[] tab, int i, Node<K,V> c, Node<K,V> v) {
     return U.compareAndSetObject(tab, // Object o  被修改的对象
-                                 ((long)i << ASHIFT) + ABASE, // long offset	偏移地址
-                                 c,	// Objext expected	原值
-                                 v); // Objext x	所要设置的值
+			((long)i << ASHIFT) + ABASE, // long offset	偏移地址
+			c,	// Objext expected	原值
+			v); // Objext x	所要设置的值
 }
 
 /*
@@ -453,6 +452,13 @@ break
 ```
 
 [HashMap 与 ConcurrentHashMap 中 hash算法详解](https://blog.csdn.net/hskw444273663/article/details/86510813)
+
++ **为什么放弃分段锁**
+
+  ```
+  1. 分段锁 segment 继承于 ReentrantLock 增加了 内存开销，而 JDK 1.8 使用了 cas+Synchronized 锁，优化了内存空间的占用！
+  2. 一个 segment 合并了多个 哈希桶，但是，对这些 哈希通而言，产生线程冲突的并不多，这样对于访问同一个 segment 中的不同桶元素而言，需要串行化执行，有损性能！而对于 JDK1.8 而言，采用对 桶首结点进行加锁的方式，实现同一个桶下的线程安全性，锁粒度更低，提高了性能！
+  ```
 
 ##### CopyOnWriteArrayList ---- 线程安全的 ArrayList
 
@@ -566,7 +572,7 @@ CopyOnWriteArrayList 缺点：
  	为了维护索引，跳表将 每一段上的索引结点 重新组合成链表！所以，跳表最少有两条链表，一条是索引链，一条是完整的数据链！
  
  · 多级索引跳表
- 	当 索引链也变得非常长时，就使用刚才的思想，在索引链上提取出新的索引链，如此往复在新索链提取出索引链，直到 时间复杂度达到 O(longN)！
+ 	当 索引链也变得非常长时，就使用刚才的思想，在索引链上提取出新的索引链，如此往复在新索链提取出索引链，直到 时间复杂度达到 O(logN)！
  	此时，形成的跳表就是多级索引跳表！
 
  	
@@ -825,8 +831,8 @@ public class LinkedBlockingQueue<E> extends AbstractQueue<E>
  · 内部结构为：
  	1、数组 构建 堆
  	2、ReentrantLock mianLock(全局锁) + mainLock.condition(读条件)
-    3、全局 cas 标记：扩容时使用
-    4、比较器：调整堆使用（出队、入队、删除 都需要）
+   3、全局 cas 标记：扩容时使用
+   4、比较器：调整堆使用（出队、入队、删除 都需要）
  · PriorityBlockingQueue 使用 ReentrantLock 实现并发读写，由于内部使用 数组 实现无界队列，所以需要时再对其进行扩容，避免空间浪费，扩容机制会根据当前容量的大小进行合适的设置！扩容时通过 cas 实现单线程分配新容量、新空间，之后再获取主锁（ReentarntLock），在主锁的控制下，将旧的队列引用指向新空间！
  · PriorityBlockingQueue 不可插入 null（否则抛出异常），并且插入的元素必须是可用 比较器 比较的，否则报错 ClassCastException 异常。由于是无界队列，其 put（插入）方法不会加锁（ 只是逻辑上put操作不需要加锁，然而put 会调用 offer 进行插入，在 offer 方法中会使用 主锁 解决并发插入的安全问题！）；当队列为空时 执行take 的线程会被阻塞！
 */
