--- a/并发/并发_3_J.U.C AQS .md
+++ b/并发/并发_3_J.U.C AQS .md
@@ -19,7 +19,7 @@
 ```java
 /*
  · 核心思想：
- 	AQS 核心思想是，如果当前线程请求的共享资源空闲，则将当前其设置为有效的工作线程，并将共享资源设置为锁定状态。如果请求的共享资源被占用，那就需要一套 线程阻塞 以及 线程被唤醒时 的锁分配机制！	
+ 	AQS 核心思想是，如果当前线程请求的共享资源空闲，则将其设置为有效的工作线程，并将共享资源设置为锁定状态。如果请求的共享资源被占用，那就需要一套 线程阻塞 以及 线程被唤醒时 的锁分配机制！	
  
  · 资源锁定（源码如下）
 	AQS 内部维护了一个 用 volatile修饰的整型变量（state），用该变量表示资源锁定的状态！正是由于 volatile 修饰，保证了该变量的可见性，任何读写都是内存层面的读写（而非工作内存中的读写），此外，AQS 还是使用 CAS 保证 state 的原子性修改，因此并发情况下，state 是线程安全的！
@@ -187,7 +187,7 @@ public class ReentrantLock implements Lock, java.io.Serializable {
 
 【 注意 】
  · 相对来说非公平锁 吞吐量更大、性能更好；
- · 不公平锁可能会导致某希些线程在 队列中长期阻塞，被饿死！
+ · 不公平锁可能会导致某些线程在 队列中长期阻塞，被饿死！
 */
 ```
 
@@ -206,7 +206,7 @@ public class ReentrantLock implements Lock, java.io.Serializable {
 ```java
 /*
  · 模板方法模式：
- 	模板方法模式 与 实现接口 的方式有很大的区别！模板方法模式是基于“继承”的，主要是为了在不改变模板结构的前提下在子类中重新定义模板中的内容以实现服用代码。
+ 	模板方法模式 与 实现接口 的方式有很大的区别！模板方法模式是基于“继承”的，主要是为了在不改变模板结构的前提下在子类中重新定义模板中的内容以实现复用代码。
  	如下例：
  		购票 buyTitck() -> 安检 securityCheck() -> 乘坐交通工具 ride() -> 到达目的地 arrivea()
         上述过程，只有 乘坐交通工具可选，其他都固定！交通工具：火车、飞机...
@@ -216,7 +216,7 @@ public class ReentrantLock implements Lock, java.io.Serializable {
  · 同步器的设计是基于模板方法模式的！由上述 tryAcquire 方法即可看出！
 	所以，如果需要自定义同步器，则有以下步骤！
 	1、使用者 继承 AbstractQueuedSynchronizer 并重写指定的方法
-	2、讲 AQS 组合在自定义同步组件的实现中，并调用其模板方法，而这些模板方法会调用开发者重写的方法！
+	2、将 AQS 组合在自定义同步组件的实现中，并调用其模板方法，而这些模板方法会调用开发者重写的方法！
  
  · AQS 模板方法模式，自定义同步器中需要重写如下的方法
 */
@@ -247,8 +247,8 @@ public class ReentrantLock implements Lock, java.io.Serializable {
  
  · 方法
  	1、acquire 获取许可，默认是一个许可，也可以一次获取多个许可，如果获取不到，则阻塞（可设置阻塞时长）
-   	2、release 释放许可，默认是一个许可，也可以一次释放多个许可
-   		semaphore.acquire(5); --- 一个线程一次性获取 5 个许可证（一般没有必要做多个许可的获取和释放）
+   2、release 释放许可，默认是一个许可，也可以一次释放多个许可
+   	  semaphore.acquire(5); --- 一个线程一次性获取 5 个许可证（一般没有必要做多个许可的获取和释放）
 		Thread.sleep(20);
 		semaphore.release(5); --- 一个线程一次性释放 5 个许可证
 	
