--- a/并发/线程_1_基础.md
+++ b/并发/线程_1_基础.md
@@ -5,7 +5,7 @@
 ```java
 /*
  · 进程
- 	进程是 具有独立功能的程序 关于某个数据集合上的 一次运行活动，是系统进行资源分配的基本单位！在 Java 中，通过执行 main方法，就能启动一个进程！
+ 	进程是 具有独立功能的程序 在某个数据集合上的 一次运行活动，是系统进行资源分配的基本单位！在 Java 中，通过执行 main方法，就能启动一个进程！
  · 线程
  	线程是比进程更小的运行单位，是进程中的一个运行实体，可以视为轻量级的进程，是 CPU调度 的基本单位！
  	上述，通过 main方法 能启动一个进程，而执行 main方法 的正是这个进程中的主线程！
@@ -16,30 +16,13 @@
 	· 进程之间相互独立，不能共享资源；（各个进程都有自己独立的虚拟地址空间）
  	  线程属于某个线程，并与进程内的其他线程 共享 进程的资源！（进程内的所有线程共享进程的虚拟地址空间）
  	· 线程的切换开销比进程小！
- 	    进程的切换涉及到有关资源指针的保存，以及地址空间的变化等问题！
- 	    线程切换时，由于同一进程中的线程共享资源和地址空间，将不涉及资源信息的保存和地址空间的变化！
+ 	  进程的切换涉及到有关资源指针的保存，以及地址空间的变化等问题！
+ 	  线程切换时，由于同一进程中的线程共享资源和地址空间，就不涉及资源信息的保存和地址空间的变化！
+ 	
  	· 线程通信比进程之间的通信更加方便！
  
  · JVM 角度看待进程与线程之间的关系：
- 	· 线程是进程划分成的更小的运行单位，线程与进程最大的不同在于各个进程之间相互独立，而同一个同一个进程内的线程则可以相互影响，多个线程共享进程的 堆和方法区（jdk1.8 及之后的元空间）资源，而每个线程之间又存在私有的程序计数器、虚拟机栈和本地方法栈！
- 
- 【拓展】
- => 为什么 程序计数器是线程私有的？
- 	答：为了使线程切换之后能恢复到正确的执行位置！
- 	程序计数器是当前线程所执行的字节码的行号指示器，字节码指示器工作时就是通过改变这个计数器值来选取下一条需要执行的字节码指令！
- 	由于java虚拟机的多线程是通过线程轮流切换、分配处理器执行时间的方式实现的，在任何一个确定时刻，一个处理器（内核）只会执行一条线程中的指令。因此为了使线程切换之后能恢复到正确的执行位置，每条线程都需要一个独立的程序计数器！
-  
- => 虚拟机栈 和 本地方法栈 为什么线程私有？
- 	答：为保证线程中的局部变量不被其他线程访问到！
-  	· 虚拟机栈：虚拟机栈描述的是 java 方法执行的线程内存模型：每个方法被执行的时候，java虚拟机都会同步创建一个栈帧，用于存储局部变量表、操作数栈、动态链接、方法出口等信息。每个方法从调用直至执行完毕的过程，就对应着一个栈帧在虚拟机栈中从入栈到出栈的过程！
-  	· 本地方法栈：本地方法栈发挥的作用和虚拟机栈类似，区别在于：虚拟机栈为 虚拟机执行 java 方法（也就是字节码）服务，而本地方法栈为 虚拟机使用到的本地方法（Native方法）服务！
-    · 综上：为保证线程中的局部变量不被其他线程访问到，虚拟机栈和本地方法栈都是线程私有！
- 
- => 堆和方法区（元空间）
- 	堆和方法区是所有线程共享的资源！
- 	Java堆 是虚拟机所管理的最大的一块内存，主要用于存放对象实例（所有的对象实例都会在这里分配内存）（jdk1.7 时，HotSpot 将永久代的 字符串常量池、静态变量等移到了堆中！）
- 	方法区主要用于存储被虚拟机加载的 类型信息、常量、静态变量、即时编译器编译后的代码缓存 等数据。（JDK1.7时，HotSpot 将方法区中的 字符串常量池、静态变量移除，jdk1.8 时 将剩余内容全部移到元空间中）！
- 	
+ 	· 线程是进程划分成的更小的运行单位，线程与进程最大的不同在于各个进程之间相互独立，而同一个进程内的线程则可以相互影响，多个线程共享进程的 堆和方法区（jdk1.8 及之后的元空间）资源，而每个线程之间又存在私有的程序计数器、虚拟机栈和本地方法栈！
 */
 ```
 
@@ -65,7 +48,7 @@
 
 ##### 多线程可能带来的问题
 
-+ 并发编程的目的就是为了提高程序执行的效率，但也同时会遇到很多问题，例如：`上下文切换、死锁、内存泄漏以及受限于硬件和软件的资源闲置等问题！`
++ 并发编程的目的就是为了提高程序执行的效率 与 系统利用率，但也同时会遇到很多问题，例如：`上下文切换、死锁、内存泄漏以及受限于硬件和软件的资源闲置等问题！`
 
 ##### 上下文切换
 
@@ -83,7 +66,7 @@
 
      多线程争抢锁时，会引起上下文切换，所以多线程处理数据时，可以用一些办法来避免使用锁。
 
-     例如：将数据的 ID 按照 Hash 算法取模分段，不同的线程处理不同短段的数据！
+     例如：将数据的 ID 按照 Hash 算法取模分段，不同的线程处理不同分段的数据！
 
   2. `CAS 算法`
 
@@ -104,7 +87,8 @@
 ```java
 /*
  · 死锁
- 	两个或者多个进程相互请求对方所持有的资源，若无外力作用，它们将无法推进下去。此时称系统处于死锁状态或者系统产生了死锁！（操作系统中的定义：系统中两个或者多个进程无限期地等待永远不会发生的条件，系统将处于停止状态，这种现象称为进程死锁，这一组进程称为死锁进程）
+ 	两个或多个进程相互请求对方所持有的资源，若无外力作用，它们将无法推进下去。此时称系统处于死锁状态或者系统产生了死锁！
+ 	（操作系统中的定义：系统中两个或者多个进程无限期地等待永远不会发生的条件，系统将处于停止状态，这种现象称为进程死锁，这一组进程称为死锁进程）
  
  · 死锁具备的四个条件
  	1、资源互斥：一个资源每次只能给一个进程使用！
@@ -240,6 +224,7 @@ current thread 14
    ```java
    /*
     进程 - 资源分配图（有向图）：判断是否有死锁发生！
+    MySQL 中也使用了 资源分配图检测死锁，不过稍有不同！
    */
    ```
 
