--- a/并发/线程_3_并发.md
+++ b/并发/线程_3_并发.md
@@ -66,7 +66,7 @@
     	 - 变量 A 的内存地址 ：获取 A 在内存中的值，视为现值，用于比较（为了使，变量 A 的值能够同步到内存中，所以需要使用 volatile 修饰，保证线程之间的可见性！）
     	 - A 的原值 ：视为 A 的原值，用于比较
     	 - A 的更新值 ：用于更新内存中 A 的值
-    	仅当 传入的原值 与 内存中查询到的现值 相等时，才会将 更新值 赋予 A。 JVM 能保证 原值 与 现值的比较，已经 变量的赋值，会是一个原子操作！一般来说，若两者不相等，则自旋，不断的尝试：构成 自旋锁！
+    	仅当 传入的原值 与 内存中查询到的现值 相等时，才会将 更新值 赋予 A。 JVM 能保证 原值 与 现值的比较，以及 变量的赋值，会是一个原子操作！一般来说，若两者不相等，则自旋，不断的尝试：构成 自旋锁！
     
     · CAS自旋锁 的缺点：
     	1、ABA 时 CAS 常见的问题：解决：AtomicStampedReference、版本号
@@ -102,72 +102,12 @@
 */
 ```
 
-#####  操作系统基础概念
-
-###### 中断
-
-```java
-/*
- · 中断
-	CPU 对系统中或者系统外发生异步事件的响应，CPU 暂停正在执行的程序，保留现场后自动转去执行相应的处理程序，处理完后返回断点，继续执行被打断的程序！
-	
- · 中断处理
-	中断的处理由CPU+操作系统处理：处理过程：使用中断向量表！
-	中断向量表 是 操作系统为每种不同的信号中断设置一个值（16进制值）存放在中断向量表中。
-	当cpu接收到中断信号时，将其告知操作系统，操作系统便会去查询中断向量表，根据值调用相应的程序。
-· 硬中断、软中断
-*/
-```
-
-###### 系统级别
-
-```java
-/*
- · 操作系统的级别：
-	现在的操作系统都有两个级别：内核态、用户态。（这个cpu在硬件上就支持了）
-	
-	cpu的分级：
-		CPU-CPL->0 1 2 3 四个级别:
-		不同的指令可以跑在不同的级别上，危险的指令只能跑在0级上，级别比较高的可以直接访问硬件，为了安全，级别低的就不能访问硬件。
-		
-		操作系统就利用了cpu的分级特性，以linux为例，应用了其中的两个级别0级和3级。
-			linux的内核态：0级别：内核可以访问所有的内存空间
-			linux的用户态：3级别：用户只能访问用户的内存空间
-		linux这样的的分级使得系统非常稳定安全。
-*/
-```
-
-+ [Linux系统整体架构：用户态 vs 内核态](https://baijiahao.baidu.com/s?id=1637922221053576019&wfr=spider&for=pc)
-
-###### 为什么和内核态打交道，效率低？
-
-```java
-/*
- · 用户态调用任何内核函数（socket网络上的读写、启动、唤醒、阻塞、杀死线程...）时都会产生一个中断：著名的“80中断（0x80）”。
- · app应用经系统调用内核函数时，会发生如下步骤：
- 
- 	1、app发出0x80中断（以前的CPU：通过软件产生软中断80中断） 或者 调用sysenter原语（最新的CPU，在硬件上做的支持，相当于在汇编上直接有这个原语，通过这个原语就可以直接切换到内核态）
- 	
- 	2、os进入内核态，需要查找处理80中断的函数，同时保存硬件和app现场：
- 		（1）在中断向量表中查找处理例程（去寻找哪个函数处理这个中断值0x80：就是system_call）
- 		（2）保存硬件现场：CS、IP等寄存器的值
- 		（3）保存app现场：堆栈和寄存器中的值
- 	3、执行中断例程system_call
- 		（1）根据参数与编号寻找对应请求的处理例程
- 		（2）执行并返回，将返回值放在eax寄存器中
- 	4、返回用户态，恢复现场：
- 		用户态程序读取出返回值，同时将之前保存在栈中的数据取出，恢复现场
- 	5、app继续执行
- 		正是经过如下步骤，使得效率较低！
-*/
-```
-
 #####  悲观锁 ：synchronized
 
 ###### 对 synchronized  的认识
 
-+ synchronized 是一种悲观锁，它解决了 共享资源 线程安全的问题！它能实现互斥同步，保证任意时刻只有一个线程能够操作共享资源，而获取不到资源的线程则被阻塞，因此也称为 阻塞同步！
-+ synchronized 本质上是通过 底层操作系统的 Mutex Lock 实现的，使得 在synchronized 上阻塞或者唤醒线程都需要操作系统的帮助！这需要通过 80 中断，使线程由用户态切换到内核态，此过程较为耗时，所以早期的 synchronized 效率低下，是一个完全的重量级锁！
++ synchronized 是一种**悲观锁**，它解决了 **共享资源 线程安全**的问题！它能实现互斥同步，保证任意时刻只有一个线程能够操作共享资源，而获取不到资源的线程则被阻塞，因此也称为 **阻塞同步**！
++ synchronized 本质上是通过 底层操作系统的 **Mutex Lock** 实现的，使得 在synchronized 上阻塞或者唤醒线程都需要操作系统的帮助！这需要通过 80 中断，使线程由用户态切换到内核态，此过程较为耗时，所以早期的 synchronized 效率低下，是一个完全的重量级锁！
 + 在 jdk 6之后，jvm团队针对 synchronized 做了许多锁优化，包括：适应性自旋、锁消除、锁膨胀、轻量级锁、偏向锁等，大大提高了 synchoronized 的执行效率！
 + synchronized 是可重入锁，也是 不公平锁！
 
@@ -175,7 +115,7 @@
 
 ```java
 /*
- · 有 JVM规范可知，synchronized 在 JVM 中是基于 进入和退出 Monitor对象 来实现方法同步和代码块同步的！
+ · 由 JVM规范可知，synchronized 在 JVM 中是基于 进入和退出 Monitor对象 来实现方法同步和代码块同步的！
  · 代码块同步 通过 monitorenter / monitorexit 指令实现，JVM要保证每个 monitorenter 必须有对应的 monitorexit 与之匹配！方法同步也可用这两个指令实现，但是同步方法使用的是 ACC_SYNCHRONIZED标识，JVM 通过该标志辨别该方法是一个同步方法，从而执行相应的同步调用！
  	1、monitorenter：在编译后，其被插入到 同步代码块开始的位置
  	2、monitorexit ：在编译后，其被插入到 代码块的结束位置 或者 异常处！
@@ -229,8 +169,6 @@ public class ReentrentTest {
 print1
 print
 ```
-
-
 
 ######  synchronized 锁粒度及单例场景
 
@@ -418,7 +356,7 @@ print
 
   ![](image\偏向锁状态转换.jpg)
 
-+ 注意：已经计算过 HashCode 的对象，再也无法进入偏向锁状态！而当一个对象正处于偏向锁状态时，若收到计算其一致性哈希码请求，则偏向状态立即被撤销，并且锁会 升级为轻量级锁！
++ 注意：*已经计算过 HashCode 的对象，再也无法进入偏向锁状态！而当一个对象正处于偏向锁状态时，若收到计算其一致性哈希码请求，则偏向状态立即被撤销，并且锁会 升级为轻量级锁！*
 
   *因为：*一致性 hashcode 会占用 偏向锁中 ThreadID 与 epoch 的位置！
 
@@ -436,7 +374,7 @@ print
 
 ###### 轻量级锁
 
-+ 轻量级 是针对 操作系统 Mutex Lock实现的传统锁而言的！它的出现并不是取代重量级锁，其初衷是在没有多线程竞争资源的前提下，减少重量级锁使用 操作系统互斥量 产生的性能消耗！
++ *轻量级* 是*针对* 操作系统 *Mutex Lock* 实现的传统锁而言的！它的出现并不是取代重量级锁，其初衷是在没有多线程竞争资源的前提下，减少重量级锁使用 操作系统互斥量 产生的性能消耗！
 + 轻量级锁是在无竞争的情况下使用 CAS 操作区消除同步使用的互斥量，而偏向锁就是在无竞争下把整个同步都消除，连 CAS 操作都不需要！
 + *发生时间：偏向锁失效，或者无偏向锁时！*
 
@@ -544,7 +482,7 @@ print
   + synchronized 可重入锁实现（见上）
   + ReentrantLock 通过 AQS 中的锁状态 state 实现线程的锁状态，线程在锁内再次获取同一个锁时 state+1，释放一个锁时 state -1，直到减为 0，线程释放锁！
 
-+ **synchronized 依赖于 JVM 实现**，线程获取锁后，再执行完同步块/方法 后能自动解锁！**ReetrantLock 是 java 语言层的实现**，通过 `lock/tryLock/lockInterruptibly`等方法实现加锁，解锁时需要通过` unlock` 方法解锁，并且为保证能安全解锁，应该在` try实体中加锁，并在finally实体中解锁`！
++ **synchronized 依赖于 JVM 实现**，线程获取锁后，再执行完同步块/方法 后**能自动解锁**！**ReetrantLock 是 java 语言层的实现**，通过 `lock/tryLock/lockInterruptibly`等方法实现加锁，解锁时需要通过` unlock` 方法解锁，并且为保证能安全解锁，应该在` try实体中加锁，并在finally实体中解锁`！
 
 + ReentrantLock 比 synchronized 更多功能
 
@@ -564,7 +502,7 @@ print
 
   3. **可绑定多个条件**！
 
-     synchronized 同步块内，使用锁对象的 wait / notify / notifyAll 实现的是 一个隐含条件下的 等待通知机制，此时所有线程都会进入一个等待队列中！要像多关联一个条件时，就必须多加一个不同的对象锁！
+     synchronized 同步块内，使用锁对象的 wait / notify / notifyAll 实现的是 一个隐含条件下的 等待通知机制，此时所有线程都会进入一个等待队列中！要想多关联一个条件时，就必须多加一个不同的对象锁！
 
      ReentrantLock 可以绑定多个 Condition 对象，并与 condition 对象的实例 await / singal / singalAll 实现多个条件下的 等待通知机制，每个 condition 下都会有一个等待队列，可以实现 ”有选择性地“ 唤醒指定 condition 下的线程！
 
@@ -678,8 +616,6 @@ static class UnmodifiableList<E> extends UnmodifiableCollection<E> implements Li
  可参考 String 类定义！
 */
 ```
-
-
 
 ###### 互斥同步（阻塞同步）
 
@@ -842,14 +778,14 @@ public class ThreadLocal<T> {
         }
         // 条目表：到达指定阈值时扩容，长度必须为 2 的幂次
         private Entry[] table;
-        // 数组初识长度：2的幂次：使得 条目 均匀分散到 entry数组中！
+        // 数组初始长度：2的幂次：使得 条目 均匀分散到 entry数组中！
         private static final int INITIAL_CAPACITY = 16;
         // 表中条目的数量
         private int size = 0;
 
         // 扩容阈值：Default to 0
         private int threshold;
-        // 扩容阈值为数组长度的2/3
+        // 扩容阈值为 长度的2/3
         private void setThreshold(int len) {
             threshold = len * 2 / 3;
         }
