--- a/MySQL/数据库_0_B+ 树 算法篇.md
+++ b/MySQL/数据库_0_B+ 树 算法篇.md
@@ -59,12 +59,12 @@
     $$
     由公式可见，若想要降低树的高度，就需要将 低数 变大：将树的出度 增加 —— 多叉树！
 
-+ m 叉树 定义
++ **m 叉树 定义**
 
-  1. 每个结点 有m个子结点（m-1 个键值）
-  2. 每个 结点中的键值按照升序排列！
-  3. 前 i 个子结点中的键值都小于 第 i 个键值！
-  4. 后 m-i 个子结点中的键值都大于第 i 个键值！
+  1. *每个结点 有m个子结点（m-1 个键值）*
+  2. *每个 结点中的 键 按照升序排列*
+  3. *前 i 个子结点的键值，都小于 第 i 个键值*
+  4. *后 m-i 个子结点的键值，都大于 第 i 个键值*
 
 + 典型的 m 叉树有 2-3-4 Tree 以及 B-Tree！
 
@@ -86,23 +86,23 @@
 
   0. **首先是棵 m叉树**！
 
-  1. 树中的**每个结点至多有 m 个子结点（m 指的是树的阶数）**
+  1. 树中的**每个结点最多有 m 个子结点（m 指的是树的阶数）**
 
      即：树中的每个结点至多有 m-1 个关键字！
 
-  2. 若 **根结点 不是叶子结点，则至少有两棵子树**！
+  2. 若 **根结点 不是叶子结点，则至少有 2 个子结点**！
 
      即：当根结点为叶子结点时，可以没有子树；不为叶子结点时，至少有一个关键字，也就是说出度至少为 2 ！
 
-  3. **除根结点之外，所有非叶子结点至少有`m/2（向上取整）`个叶子结点**！
+  3. **除根结点之外，所有非叶子结点至少有`m/2（向上取整）`个子结点**！
 
-  4. 所有的非叶子结点中必须包含如下属性：
-
-     关键字总数 n、关键字、指向子结点的指针（有 n 个关键字，就必须有 n+1 个指针）
-
-  5. **所有的叶子结点都出现在同一层上，叶子结点中不包含关键字，它是个空 结点**！！
+  4. **所有的叶子结点都出现在同一层上，叶子结点中不包含关键字，它是个空 结点**！！
 
      即：所有的叶子结点具有相同的深度 = 树高！
+
+  5. 所有的非叶子结点中必须包含如下属性：
+
+     关键字总数 n、关键字、指向子结点的指针（*有 n 个关键字，就必须有 n+1 个子结点*）
   
   ![](image_Tree\B树.webp)
   
@@ -110,10 +110,10 @@
 
   在对 B 树 进行增删时，需要保证 修改的树 依旧满足B 数据的定义！
 
-  1. 插入时：检查结点中的关键字是否 大于 m-1 ，如果大于，则选出结点的中间关键字 作为父节点的新关键字，将本结点分裂成两个结点！此时，父结点中关键字增加，相当于又做了一次增加操作，此时，依旧按照此方法执行。这是个向上分裂的过程！
-  2. 删除时：检查结点中的关键字是否 小于 `m/2(向上取整)`，如果小于则：
+  1. **插入时**：检查结点中的关键字是否 大于 m-1 ，如果大于，则选出结点的中间关键字 作为父节点的新关键字，将本结点分裂成两个结点！此时，父结点中关键字增加，相当于又做了一次增加操作，此时，依旧按照此方法执行。这是个**向上分裂**的过程！
+  2. **删除时**：检查结点中的关键字是否 小于 `m/2(向上取整)-1`，如果小于则：
      1. 如果兄弟结点中的关键字够多，就拖下父节点关键字，并朝兄弟结点中借一个升级为父节点的关键字！
-     2. 如果兄弟结点中的关键子不够，就拖下父节点关键字，一起和兄弟结点合并！此时父结点中关键字减少，相当于又做了一次删除操作，此时，依旧按照上述方法执行。这是个向上合并的过程！
+     2. 如果兄弟结点中的关键子不够，就拖下父节点关键字，一起和兄弟结点合并！此时父结点中关键字减少，相当于又做了一次删除操作，此时，依旧按照上述方法执行。这是个**向上合并**的过程！
 
 ##### B+ 树
 
@@ -193,10 +193,12 @@
 
      即：从叶子结点到跟结点 的所有路径上，不能出现连续的两个 红节点！
 
-  4. 每个叶子结点都是 黑色 的空结点（null 结点）
+  4. 每个叶子结点都是 黑色 的空结点**（null 结点）**
 
   5. 从 任一结点 到 某个叶子结点 的 所有路径之间都包含相同数目的黑色结点！
 
+     **保证了任意一条路径不会比其他路径长 2 倍，这也是 非严格平衡的表现**
+     
      ![](image_Tree\红黑树.jpg)
 
 + 维护 RB-Tree 定义
