--- a/MySQL/数据库_2_系统原理.md
+++ b/MySQL/数据库_2_系统原理.md
@@ -39,7 +39,7 @@
 
 + 隔离性（Isolation）
 
-  一个事务 所做的修改，在最终提交之前，对其他事务不可见
+  **一个事务 所做的修改，在最终提交之前，对其他事务不可见**
 
   ```
   例如：银行转账 A -> B，若 A 有 100 元，现在需要向 B 转账 20 元！
