--- a/并发/并发_2_J.U.C 并发容器 .md
+++ b/并发/并发_2_J.U.C 并发容器 .md
@@ -26,7 +26,7 @@ HashMap 是线程不安全的，在并发的场景下，如果想使用线程安
  · SynchronizedMap 内部维护了一个 普通的 Map<K,V> 以及 互斥量 Object mutex ！
  · SynchronizedMap 有两个构造方法
  	1、 参数只有一个 Map
-    2、 参数为 Map 、互斥量
+ 	2、 参数为 Map 、互斥量
  · SynchronizedMap 与 HashTable 一样在内部使用 互斥锁 保证线程安全性！只有一个线程能获取到对象锁！
  	1、 若构造时只传入一个 Map：则对象锁，就是本身的锁
  	2、 若构造时还传入一个 互斥量mutex：则对象锁，就是这个 mutex 对象的锁！
@@ -349,7 +349,7 @@ final V putVal(K key, V value, boolean onlyIfAbsent) {
             tab = initTable();
         // 1、如果 hash码 所在桶 为null，记录桶的头结点为 f
         else if ((f = tabAt(tab, i = (n - 1) & hash)) == null) {
-            // cas 操作 添加node结点（该桶的头结点） ，失败则自旋：保证成功！
+            // cas 操作 添加node结点（该桶的头结点） ，失败则重新来过（for循环重新插入）！
             if (casTabAt(tab, i, null, new Node<K,V>(hash, key, value)))
                 break;
         }
@@ -384,7 +384,7 @@ final V putVal(K key, V value, boolean onlyIfAbsent) {
                             Node<K,V> pred = e;
                             // 判断是否到达尾结点
                             if ((e = e.next) == null) {
-                                // 是的话：直接添加新结点：未插入
+                                // 是的话：直接添加新结点：尾插入
                                 pred.next = new Node<K,V>(hash, key, value);
                                 break;
                             }
@@ -434,7 +434,7 @@ static final <K,V> boolean casTabAt(Node<K,V>[] tab, int i, Node<K,V> c, Node<K,
 总结：
 1、获取元素 hash 值
 2、寻址相应的桶，判断桶是否为 null
-	true：通过 cas 将结点插入，如果插入失败，则自旋，保证插入成功
+	true：通过 cas 将结点插入，如果插入失败，则重新来过（for 循环失败重来，重新尝试插入）
 break
 3、判断 当前桶是否在正在被其他线程扩容！
 	true：协助扩容
@@ -557,7 +557,7 @@ CopyOnWriteArrayList 缺点：
 
 设计思想：
 	读写分离！
-	写操作 加上互斥锁并另外开辟新空间 已解决并发安全性！
+	写操作 加上互斥锁并另外开辟新空间 以解决并发安全性！
 	保证 最终一致性！
 */
 ```
