--- a/并发/并发_3_J.U.C AQS .md
+++ b/并发/并发_3_J.U.C AQS .md
@@ -401,7 +401,7 @@ public class CountDownLatchExample1 {
 /*
  · CyclicBarrier 与 CountDownLatch 类似，其字面意思就是 “循环屏障” 。它使得 一组线程到达一个屏障（同步点）时被阻塞，直到最后一个线程到达屏障时，屏障才会开门，所有被屏障拦截的线程才会继续执行！
  · 创建 CyclicBarrier 对象时，需要传入一个整型变量 parties，该参数表示屏障拦截的线程数量，每个线程调用 await 方法告诉 CyclicBarrier 某个线程已经达到屏障 并 开始阻塞，CyclicBarrier内部计数器 就会 -1。
-   CyclicBarrier 提供了一个支持函数式编程的构造器：CyclicBarrier(int parties, Runnable barrierAction) ：当最后一个线程道道屏障点时，优先执行 传入的函数式实例的方法（barrierAction.run()）再唤醒所有被阻塞的线程 ，这是为了便于处理更加复杂的业务场景！
+   CyclicBarrier 提供了一个支持函数式编程的构造器：CyclicBarrier(int parties, Runnable barrierAction) ：当最后一个线程到达屏障点时，优先执行 传入的函数式实例的方法（barrierAction.run()）再唤醒所有被阻塞的线程 ，这是为了便于处理更加复杂的业务场景！
    
  · 方法：
  	await()：阻塞线程，当线程数达到 屏障点时，释放所有线程，并重置内部计数器
