--- a/并发/并发_4_J.U.C 线程池 .md
+++ b/并发/并发_4_J.U.C 线程池 .md
@@ -1,4 +1,4 @@
-#### 【J.U.C_4_线程池】
+#### J.U.C_4_线程池
 
 ##### 线程池 介绍
 
@@ -21,7 +21,7 @@
 ```java
 /*
  · 当一个新任务提交到线程池后，线程池会经过如下流程：
-   1）判断 核心线程池（corePollSize）里的线程是否都在执行任务？
+   1）判断 核心线程池（corePoolSize）里的线程是否都在执行任务？
    	  否：创建一个新线程 执行任务！
    	  是：核心线程 里的线程都在执行任务，则进行下一步：
    2）判断 工作队列（workQueue） 是否已满？
