--- a/并发/线程_1_基础.md
+++ b/并发/线程_1_基础.md
@@ -52,7 +52,7 @@
 
 ##### 上下文切换
 
-+ 上下文切换：
++ **上下文切换：**
 
   多线程编程中，CPU通过为每个线程分配时间片来实现并发任务执行，当某个线程执行完一个时间片后，便将CPU执行权交给下一个线程！对于某个任务，CPU通过时间片分配的算法来循环执行，当任务执行完一个时间片后，就会切换到下一个任务，但是，在切换任务之间，CPU会保存当前任务的执行状态，以便下次切换回该任务时能够再次加载任务的状态。`任务从保存到再加载的过程就是一次上下文切换！`
 
@@ -60,7 +60,7 @@
 
   时间片是CPU分配给各个线程的，为了使多个线程宏观上同时执行，所以时间片会非常短，所以 CPU 需要不停的切换线程执行，时间片一般是几十毫秒（ms）
 
-+ 如何减少上下文切换？
++ **如何减少上下文切换？**
 
   1. `无锁并发编程`
 
