--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -53,67 +53,101 @@
 
 + JVM  中的 线程和进程
 
-  线程是进程划分成的更小的运行单位，两者最大的区别在于，各个进程之间相互独立，而线程之间可以相互影响！JVM 内部 多个线程共享同一个进程中的 堆和方法区，而每个线程的 程序计数器、虚拟机栈、本地方法栈 又是私有的！
 
-##### 中断
+##### 系统调用
 
-```java
-/*
- · 中断
-	CPU 对系统中或者系统外发生异步事件的响应，CPU 暂停正在执行的程序，保留现场后自动转去执行相应的处理程序，处理完后返回断点，继续执行被打断的程序！
-	
- · 中断处理
-	中断的处理由CPU+操作系统处理：处理过程：使用中断向量表！
-	中断向量表 是 操作系统为每种不同的信号中断设置一个值（16进制值）存放在中断向量表中。
-	当cpu接收到中断信号时，将其告知操作系统，操作系统便会去查询中断向量表，根据值调用相应的程序。
-· 硬中断、软中断
-*/
-```
+###### CPU 特权级
 
-##### 系统级别
++ CPU 将特权分为4个级别：**Ring0、Ring1、Ring2、Ring3**
 
-```java
-/*
- · cpu的将指令分为了四个级别：0 1 2 3 四个级别:
- 	危险的指令处于 0级上，可以直接访问硬件，为了安全，级别低的就不能访问硬件。
- 
- · 操作系统就利用了cpu的分级特性，linux操作系统，应用了其中的 0级和3级。
- 	linux的内核态：0级别：内核可以访问所有的内存空间
- 	linux的用户态：3级别：用户只能访问用户的内存空间
- 	
- · 这样的的分级使得系统非常稳定安全。
-*/
-```
+  ```
+   · Ring0 是最高级别，有关安全性的指令 都被限制在了 Ring0 级别，包括：内存清理、置时钟、分配系统资源、修改虚拟存储的段表和页表、修改用户访问权限等。
+   
+   · 如果这些指令被特权低的用户程序执行，那可能会引起系统混乱，甚至崩溃！因此 Ring0 级别的指令只能被 操作系统内核使用，不能被其他应用程序执行，用户程序只能执行低级别的指令！
+  ```
 
-+ [Linux系统整体架构：用户态 vs 内核态](https://baijiahao.baidu.com/s?id=1637922221053576019&wfr=spider&for=pc)
+  [CPU 运行环、特权级 与 保护](https://blog.csdn.net/drshenlei/article/details/4265101?depth_1-utm_source=distribute.pc_relevant.none-task-blog-OPENSEARCH-1&utm_source=distribute.pc_relevant.none-task-blog-OPENSEARCH-1)
 
-**为什么和内核态打交道，效率低？**
++ Linux 操作系统就利用了 CPU 特权分级的特性，*应用了其中的 0级和3级*。
 
-```java
-/*
- · 用户态调用任何内核函数（socket网络上的读写、启动、唤醒、阻塞、杀死线程...）时都会产生一个中断：著名的“80中断（0x80）”。
- · 用户程序 进行系统调用时，会执行一系列耗时的操作：
- 	1、用户程序发出 0x80中断 或者 调用sysenter原语
-		 以前的CPU：通过软件产生软中断80中断
- 		 最新的CPU，在硬件上做的支持，提供 系统调用原语，通过这个原语就可以直接切换到内核态
- 	
- 	2、操作系统进入内核态，需要到中断向量表中，查找 80中断 相关的处理子程序的入口，同时保存硬件和用户线程的执行状态：
- 		（1）在中断向量表中查找处理例程（去寻找哪个函数处理这个中断值0x80：就是system_call）
- 		（2）保存硬件现场：CS、IP等寄存器的值
- 		（3）保存用户线程状态：堆栈和寄存器中的值
- 
- 	3、执行 中断处理子程序：system_call
- 		（1）根据参数与编号寻找对应请求的处理例程
- 		（2）执行并返回，将返回值放在eax寄存器中
- 	
- 	4、返回用户态，恢复现场：
- 		用户态程序读取出返回值，同时将之前保存在栈中的数据取出，恢复现场
- 	
- 	5、用户程序继续执行
+  + **Linux 内核态：0级别**：内核可以执行所有指令，访问所有的内存空间
 
- · 正是这些步骤，使得效率较低！
-*/
-```
+  + **Linux 用户态：3级别**：用户只能执行非特权指令
+
+    ```
+    用户态如果想使用特权指令，则需要 产生中断，将请求交给 内核态 来完成，这是唯一途径！
+    ```
+
+  [Linux系统整体架构：用户态 vs 内核态](https://baijiahao.baidu.com/s?id=1637922221053576019&wfr=spider&for=pc)
+
++ 这样的的分级使得系统非常稳定安全。
+
+###### 中断
+
++ **中断**
+
+  ```
+   · CPU 在执行 程序的过程中，由于某种外部或者内部 异步事件的作用，使得 CPU 停止当前正在执行的程序，保存现场后自动转去执行相应的处理程序，处理完后返回断点，继续执行被打断的程序！
+  ```
+
++ **中断处理**
+
+  ```
+  1. 保存现场
+  2. 执行中断处理子程序
+  3. 中断返回，恢复现场
+  ```
+
++ **硬中断 & 软中断**
+
+###### 进入内核态
+
++ **为什么和内核态打交道，效率低？**
+
+  ```
+   · 在用户态产生的任何系统调用，都需要转向内核态来完成，由用户线程 切换为 内核线程！
+   	这两种状态的转换开销，主要来自于 响应中断、保护 和 恢复执行现场的成本！
+   	
+   · 内核函数的调用：socket网络上的读写，对于 1:1 线程模型而言，启动、唤醒、阻塞、杀死线程 等线程操作都需要产生系统调用！
+  ```
+
++ **用户态 -> 内核态** 
+
+  1. *用户程序发出 0x80中断 或者 调用sysenter原语*
+
+     ```
+     以前的CPU：通过软件产生软中断80中断
+     最新的CPU，在硬件上做的支持，提供 系统调用原语，通过这个原语就可以直接切换到内核态
+     ```
+
+  2. *操作系统 保存 现场*
+
+     ```
+     （1）保存硬件现场：CS、IP等寄存器的值（CS：代码段寄存器，IP：指令指针寄存器）
+     （2）保存用户线程状态：堆栈和寄存器中的值（方法调用过程中的 各种变量 和 资源）
+     
+      上述这些信息都将保存到 栈 中！
+     ```
+
+  3. *CPU 查找中断处理子程序 并 执行*
+
+     ```
+      · 根据中断类型码，在中断向量表中查找 所对应的中断服务子程序！
+     	即：寻找处理 中断值为0x80 的中断处理子程序的入口地址，就是 system_call 中断处理子程序！
+     	
+      · 执行中断服务子程序，将返回值放在eax寄存器中
+      	即：执行 system_call 中断处理子程序
+     ```
+
+  4. *返回用户态，恢复现场*
+
+     ```
+     用户态程序读取出返回值，同时将之前保存在栈中的数据取出，恢复现场
+     ```
+
+  5. *用户程序继续执行*
+
++ **保存现场 和 恢复现场 免不了一系列数据在各种寄存器、缓存中来回拷贝，这当然是一个耗费时间的过程！**
 
 ##### 进程通信
 
@@ -202,16 +236,35 @@
 
   1. **先来先服务**算法（FCFS：First Come First Serve）
 
+     ```
+     最公平最简单的调度算法，但是系统吞吐量会降低，不能很好的照顾到短作业。
+     ```
+
   2. **短作业优先**算法（SJF：Short Job First）
 
+     ```
+     有利于短作业，不利于长作业，能够提高系统吞吐量，但是容易造成进程饥饿（长作业进程迟迟得不到处理）。
+     ```
+
   3. **最短剩余时间优先**算法（SRTF：Shortest Remain Time First）：抢占式
+
+     ```
+     最大化的有利于短作业，是一种抢占式调度算法，最大化的提高系统吞吐量，但是也最容易造成长作业进程饥饿。
+     ```
 
   4. **最高响应比**算法（HRN：Highest Response Ratio Nex）
 
      ```
      响应比 = 作业周转时间 / 作业处理时间
-     
      作业周转时间：作业被加载到内存 到 作业执行完成 之间的时长！
+     ```
+
+     ```
+     相同等待时长的作业：处理时间越短越有利：有利于短作业
+     相同作业处理时长的作业：等待时间越长越有利 ：有利于长作业（等待时间越长，优先级越高）
+     
+     最高响应比算法兼顾了 长作业和短作业，即能够保证短作业能够及时执行，也能够保证长作业不会饥饿。
+     缺点：操作系统需要花费额外的时间计算 相应比，造成额外的系统开销。
      ```
 
   5. **最高优先级**算法（HPF：Hightest Priority First）
@@ -257,7 +310,7 @@
 
      ```
       · 为每个进程分配一个优先级，优先级高的进程优先占用 处理机 资源！
-     	为避免低优先级的线程永久等待，调度器会 进程等待的时长 动态改变优先级！
+     	为避免低优先级的线程永久等待，调度器会根据 进程等待的时长 动态改变优先级！
      	进程等待的时间越长，优先级会越高！
      	
       · 通过优先级的动态判断，能够有效的控制 进程占用 CPU 的时长，达到分时的效果！
@@ -420,7 +473,7 @@ current thread 14
    */
    ```
 
-   <img src="C:/Users/10652/Desktop/Fighting/temp_over/并发/image/死锁_3.png" style="zoom: 67%;" />
+   <img src="image/死锁_3.png" style="zoom: 67%;" />
 
 ###### 解决死锁
 
@@ -535,7 +588,7 @@ current thread 14
 
   通过页表，使得连续的逻辑地址 可以分配在 不连续的内存块中！
 
-  页中某一段程序的 **物理地址 = 页框号*页框大小 + 页内地址**
+  页中某一段程序的 **物理地址 = 页面号*页框大小 + 页内地址**
 
 + *地址变换* ：动态重定位技术
 
@@ -561,7 +614,7 @@ current thread 14
 
 + *快表* ：**只需一次访问内存**
 
-  上述 CPU 访问操作数，需要两次操作内存，耗时较长，而 快表 正是用于缩短操作数从访问时长！
+  上述 CPU 访问操作数，需要两次操作内存，耗时较长，而 快表 正是用于缩短操作数的访问时长！
 
   快表 是 具有 **并行查找能力的** **高速寄存器组**，也称为 *相联存储器* ！它能实现**按照内容查找**，存放着当前访问最为频繁的 少量 活动页表项！
 
@@ -683,7 +736,7 @@ current thread 14
 
   ```
   目的：
-  能够在内存中建立更多的进程，增加系统的并发量，使得在 提高内存利用率！
+  能够在内存中建立更多的进程，增加系统的并发量，使得 提高内存利用率！
   
   应用：
   目前大多数操作系统都使用了虚拟内存的技术：windows家族的“虚拟内存”，Linux的“交换空间”等！
@@ -770,7 +823,7 @@ current thread 14
 
   1. 保护 CPU 环境
   2. 分析中断原因
-  3. 转入 （缺页）中断处理程序 进行处理
+  3. 转入（缺页）中断处理程序 进行处理
   4. 恢复 CPU 环境，进程继续执行！
 
 + 缺页中断 与 普通的中断有着明显区别：
