--- a/计网/计网_1_基础.md
+++ b/计网/计网_1_基础.md
@@ -136,7 +136,7 @@
 
   2. 查询**操作系统本地文件 /etc/hosts 中是否配置**；没有，则下一步！
 
-  3. 查询 **本地DNS解析服务器 缓存**，如果查询不到，则直接将请求 转发到 根域名服务器 进行解析！
+  3. 查询 **本地DNS解析服务器 缓存**，如果查询不到，则直接将请求 转发到 **根域名服务器** 进行解析！
 
      ```
      LDNS 为 本地互联网接入 DNS 解析服务，具有缓存域名解析结果的功能！
