--- a/并发/线程_3_并发.md
+++ b/并发/线程_3_并发.md
@@ -1,29 +1,61 @@
-#### 【并发_补充】
+#### 并发_补充
 
 ##### 乐观锁 与 悲观锁
 
 ###### 乐观锁 VS 悲观锁
 
-```java
-/*
- 【 悲观锁 】 ——  互斥同步（阻塞同步）
- · 总是假设坏的情况，任何时刻都会有并发冲突，所以每次访问数据时，都会上锁！其他线程想要访问数据时，就会阻塞直到它获取锁！
- · 数据库外部悲观锁：synchronized、ReentrantLock
- · 数据库内部悲观锁：排他锁（写锁），是一种互斥锁，在操作数据时都需要加锁！
- 	MySQL 中的 update、insert、delete 自动加上写锁，也可以显示的对 查询语句显示加锁：select ... for update
++ *悲观锁 —— 互斥同步（阻塞同步）*
 
+  ```
+   · 总是假设最坏的情况，任何时刻都会有并发冲突，所以每次访问数据时，都会加锁！其他线程想问访问数据时，就会被阻塞直到锁被释放！
+  ```
 
- 【 乐观锁 】 ——  非阻塞同步（无锁编程 Lock-Free）
- · 总是假设最好的情况，访问数据不会上锁，只会检测是否存在并发冲突，如果没有其他线程争用共享数据，则操作数据；如果共享数据被争用，那就执行补偿措施：失败重试，直到无冲突为止！乐观锁适用于读多写少的场景，用于提高吞吐量！
- · 实现方式：CAS、版本号机制（时间戳）！
- · 数据库中提供的类似于 write_condition 机制，其实就是乐观锁的思想！在 java.util.concurrent.atomic 包下面的原子变量类就是使用了乐观锁的一种实现方式：CAS
+  **实现方式：**
 
- 【 乐观锁 VS 悲观锁 】：两种锁各有优缺点，各自都有其适合的使用场景，没有更好，只有合适！
- · 乐观锁适用于 读多写少 的场景，即：冲突很少发生，此时如果频繁地阻塞锁，并且多数情况下没有意义，这会导致大量的锁开销！若不加锁，则能加大系统的吞吐量！
- 
- · 悲观锁适用于 多写 的场景，一般会经常产生冲突，此时如果使用乐观锁，则会导致上层应用不断的 retry，占用 CPU 资源，反而会降低系统 性能！
-*/
-```
+  + 数据库外部悲观锁：**synchronized、ReentrantLock**
+
+  + 数据库内部悲观锁：**排他锁（写锁）**
+
+    ```
+     · MySQL 中的 update、insert、delete 自动加上写锁
+     · 可以对 询语句显示加锁：select ... for update
+    ```
+
++ *乐观锁 —— 非阻塞同步（无锁编程 Lock-Free）*
+
+  ```
+   · 总是假设最好的情况，访问数据不会上锁，只会检测是否存在并发冲突，如果没有其他线程对共享数据进行写操作，则操作数据；如果共享数据被争用，那就执行补偿措施：失败重试，直到无冲突为止！
+   
+   · 乐观锁适用于读多写少的场景，用于提高吞吐量！
+  ```
+
+  **实现方式：**
+
+  + 检测冲突：**CAS、版本号机制（时间戳）**
+
+    ```
+    在 java.util.concurrent.atomic 包下面的原子变量类就是使用了乐观锁的一种实现方式：CAS
+    ```
+
+  + 补偿措施：**自旋（失败重试）**
+
+  + 数据库中的乐观锁 ？
+
+    ```
+    数据库中提供的类似于 write_condition 机制，其实就是乐观锁的思想！
+    ```
+
++ *乐观锁 vs 悲观锁*
+
+  两种锁各有优缺点，各自都有其适合的使用场景，没有更好，只有合适！
+
+  ```
+   · 悲观锁适用于 多写 的场景。
+   	即：一般会经常产生冲突，此时如果使用乐观锁，则会导致上层应用不断的 retry，占用 CPU 资源，反而会降低系统 性能！
+  
+   · 乐观锁适用于 读多写少 的场景。
+   	即：冲突很少发生，此时如果频繁地阻塞锁，并且多数情况下没有意义，这会导致大量的锁开销！若不加锁，则能加大系统的吞吐量！
+  ```
 
 ###### 乐观锁实现（两种方式）
 
@@ -98,7 +130,6 @@
  	
  	2、对于资源竞争严重（线程冲突严重）或者 同步块内执行时间长 的情况，使用 synchronized
  	  因为 CAS自旋 时间长，会占用 CPU 更多资源，此时 效率低于 synchronized！
-
 */
 ```
 
@@ -107,8 +138,17 @@
 ###### 对 synchronized  的认识
 
 + synchronized 是一种**悲观锁**，它解决了 **共享资源 线程安全**的问题！它能实现互斥同步，保证任意时刻只有一个线程能够操作共享资源，而获取不到资源的线程则被阻塞，因此也称为 **阻塞同步**！
-+ synchronized 本质上是通过 底层操作系统的 **Mutex Lock** 实现的，使得 在synchronized 上阻塞或者唤醒线程都需要操作系统的帮助！这需要通过 80 中断，使线程由用户态切换到内核态，此过程较为耗时，所以早期的 synchronized 效率低下，是一个完全的重量级锁！
+
++ synchronized 本质上是通过 底层操作系统的 **Mutex Lock** 实现的，使得 在synchronized 上**阻塞或者唤醒线程都需要操作系统的帮助**！这需要通过 80 中断，使线程由用户态切换到内核态，此过程较为耗时，所以早期的 synchronized 效率低下，是一个完全的重量级锁！
+
+  ```
+   · HotSpot 虚拟机中的线程实现：
+  	每个 Java 线程都是直接映射到 一个操作系统原生的线程实现的，中间没有额外的其他结构，即 1:1 线程模型！
+  	所以 HotSpot虚拟机 自己是不会去干涉线程调度的（可以设置线程优先级给操作系统提建议），全权交给底层的操作系统去处理，所以何时冻结或者唤醒线程、该给线程分配多少处理执行时间、该线程安排到哪个处理器核心去执行等，都是由操作系统自己决定！
+  ```
+
 + 在 jdk 6之后，jvm团队针对 synchronized 做了许多锁优化，包括：适应性自旋、锁消除、锁膨胀、轻量级锁、偏向锁等，大大提高了 synchoronized 的执行效率！
+
 + synchronized 是可重入锁，也是 不公平锁！
 
 ###### synchronized 原理
@@ -464,21 +504,41 @@ print
 
 ##### 悲观锁 ：ReentrantLock
 
-```java
-/*
- ·ReentrantLock 是 java.util.concurrent 包中的锁！它继承于 locks 包下的 Lock 类，是 java 语言层面上的悲观锁，也是可重入锁，它实现的功能是 synchronized关键字的超集！是java语言实现的互斥同步的手段！
- 
- ·ReentrantLock 在内部基于 AQS 框架，实现了独占锁 Sync，并在 Sync 基础上，定义了公平锁类与不公平锁类，因此 ReentrantLock 可以指定实现公平/不公平锁，默认不公平！
- 
- · AQS（AbstractQueuedSynchronizer）是一个抽象类，用于实现 同步器组件！AQS 借助模板方法模式，让 ReentrantLock 实现其抽象方法 tryAcquire 以及 tryRelease 以实现自定义的锁分配！而AQS 底层维护了 volatile 修饰的整型变量 state 表示锁状态，并通过 CAS 修改该状态实现同步机制！此外，AQS 还维护了一个 双端队列，用于存放需要阻塞的线程！
-*/
-```
++ ReentrantLock 是 java.util.concurrent 包中的锁！**它继承于 locks 包下的 Lock 类，是 java 语言层面上的悲观锁，也是可重入锁，它实现的功能是 synchronized关键字的超集！是java语言实现的互斥同步的手段！**
+
+  **ReentrantLock 在内部基于 AQS 框架，实现了独占锁 Sync，并在 Sync 基础上，定义了公平锁类与不公平锁类，因此 ReentrantLock 可以指定实现公平/不公平锁，默认不公平！**
+
+  ```
+   · AQS（AbstractQueuedSynchronizer）是一个抽象类，用于实现 同步器组件！AQS 借助模板方法模式，让 ReentrantLock 实现其抽象方法 tryAcquire 以及 tryRelease 以实现自定义的锁分配！而AQS 底层维护了 volatile 修饰的整型变量 state 表示锁状态，并通过 CAS 修改该状态实现同步机制！此外，AQS 还维护了一个 双端队列，用于存放需要阻塞的线程！
+  ```
+
++ JDK 1.6 之前，Synchronized 是完全的重量级锁，*一言不合就加锁，一言不和就阻塞，这些都需要内核态的支持*，都是耗时的过程！因此，ReentrantLock 不仅能够实现 更多的功能，性能上还比 Synchronized 优秀！
+
+  ```
+  1. ReentrantLock 并不是通过操作系统的的 MUTEX 实现的互斥锁！
+  	ReentrantLock 是基于 AQS 中的 锁状态实现的 资源互斥，同时 记录当前独占锁的拥有者！
+  	锁状态：volatile 修饰的 整型变量，使用 AQS 的方式修改锁状态！
+  	加锁解锁的方式 本身就比 Synchronized 轻量级！
+  
+  2. ReentrantLock 虽然也可以阻塞线程，但是并不是立刻阻塞！
+  	首先会尝试通过 CAS 获取锁，失败之后，在真正阻塞线程之前，至少会做一次自旋，也就是说，阻塞之前会 多次尝试获取锁的操作！
+  	这就使得，如果 锁冲突不大，并且持有锁的线程能马上执行完成时，线程不会盲目的 被阻塞！
+  	尽管存在并发冲突，如果冲突不严重，能够避免 线程被频繁阻塞唤醒的 操作，降低资源的消耗！
+  	
+  3. ReentrantLock 提供了更多的 加锁方式：
+  	加锁失败，则返回 —— 不会阻塞线程！
+  	加锁失败，则阻塞，响应中断 —— 可以在线程阻塞后，通过中断标志位 唤醒线程！
+  	加锁失败，则阻塞，超时等待，响应中断 —— 阻塞线程之前，会进行一系列的优化操作，并且阻塞线程后，超时自动唤醒！
+  ```
+
+  *JDK1. 6 开始，Synchronized 做了一些列的优化，到目前而言，ReentrantLock 性能上已经不再是优势，在并发冲突大的场景下，性能上较 Synchronized 差，因此仅仅是 功能上的优势！*
 
 #####  synchronized vs ReentrantLock
 
 + **两者都是可重入锁**
 
-  + 可重入锁：某个线程获取到锁后，未释放锁前，再次申请该资源的锁，能够再次获得，而其他线程阻塞在外面！
+  可重入锁：某个线程获取到锁后，未释放锁前，再次申请该资源的锁，能够再次获得，而其他线程阻塞在外面！
+
   + synchronized 可重入锁实现（见上）
   + ReentrantLock 通过 AQS 中的锁状态 state 实现线程的锁状态，线程在锁内再次获取同一个锁时 state+1，释放一个锁时 state -1，直到减为 0，线程释放锁！
 
@@ -492,7 +552,11 @@ print
 
      synchronized 被阻塞的线程不会响应中断！
 
-  2. **实现公平锁**！
+  2. **超时等待**！
+
+     ReentrantLock 通过 `public boolean tryLock(long timeout, TimeUnit unit)` 接口，可以实现加锁阻塞时，超时则自动返回！
+
+  3. **实现公平锁**！
 
      ReentrantLock 内部基于 AQS 实现了公平锁和不公平锁！而ReentrantLock 默认是不公平锁！可在创建锁时传入 boolean 变量指定公平与否！
 
@@ -500,7 +564,7 @@ print
 
      公平/不公平：被阻塞的线程按照 FIFO 获取锁，则是公平锁，否则不公平！
 
-  3. **可绑定多个条件**！
+  4. **可绑定多个条件**！
 
      synchronized 同步块内，使用锁对象的 wait / notify / notifyAll 实现的是 一个隐含条件下的 等待通知机制，此时所有线程都会进入一个等待队列中！要想多关联一个条件时，就必须多加一个不同的对象锁！
 
@@ -620,6 +684,17 @@ static class UnmodifiableList<E> extends UnmodifiableCollection<E> implements Li
 ###### 互斥同步（阻塞同步）
 
 + synchronized、ReentrantLock
+
+  ```
+   · 互斥同步 面临的主要问题是 进行线程阻塞和唤醒所带来的性能开销，因此这种同步方案也称为 阻塞同步！
+   · 互斥同步是悲观策略！无论共享数据是否真的会出现竞争，它都会进行加锁，会产生如下开销：
+   	1. 用户态到内核态转换
+   	2. 维护锁计数器
+   	3. 检查是否有被阻塞的线程需要唤醒
+   
+   （对 Synchronized 而言，这里说的是 重量级锁）
+   《深入理解 Java 虚拟机》如是说！
+  ```
 
 ###### 非阻塞同步
 
